examples/test/testpolicy18813.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18813
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key35: value23
      key19: value46
      key44: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value27
          key23: value20
          key20: value45
